Bug 483795 - Updates with Version=6 were ignored if kconf_update5 ran before
Summary: Updates with Version=6 were ignored if kconf_update5 ran before
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfig
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Matthew Dawson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-16 22:33 UTC by Fabian Vogt
Modified: 2024-03-23 15:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2024-03-16 22:33:11 UTC
kconf_update5 is missing 1a4c737941316c1e6ad61479b0c16b7de595339e, which means it updates ctime and mtime entries for .upd files even on version mismatch. This means that kconf_update6 ignores those files when it runs after kconf_update5.
Comment 1 Bug Janitor Service 2024-03-16 22:38:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfig/-/merge_requests/283
Comment 2 Fabian Vogt 2024-03-23 15:52:24 UTC
Git commit df8e5772315915a7b83d8e2b76e2fd56ed477198 by Fabian Vogt.
Committed on 23/03/2024 at 15:47.
Pushed by fvogt into branch 'master'.

kconf_update: Also run .upd files if times match but done is empty

Workaround that kconf_update5 adds entries for .upd files it doesn't run.

M  +3    -1    src/kconf_update/kconf_update.cpp

https://invent.kde.org/frameworks/kconfig/-/commit/df8e5772315915a7b83d8e2b76e2fd56ed477198