kconf_update: Also run .upd files if times match but done is empty

Workaround that kconf_update5 adds entries for .upd files it doesn't run.

BUG: 483795